cqrs-todo-core/src/snapshots/tests__completed_event.snap
---
created: "2019-01-25T18:04:19.017984+00:00"
creator: insta@0.5.2
expression: data
source: cqrs-todo-core/src/lib.rs
---
{
  "event_type": "todo_completed",
  "raw": "{}"
}
