cqrs-todo-core/src/snapshots/tests__description_updated_event.snap
---
created: "2019-01-30T00:11:05.238525+00:00"
creator: insta@0.5.2
expression: data
source: cqrs-todo-core/src/lib.rs
---
{
  "event_type": "todo_description_updated",
  "raw": "{\"new_description\":{\"text\":\"alt test description\"}}"
}
