cqrs-todo-core/src/snapshots/tests__reminder_updated_event.snap
---
created: "2019-01-25T18:04:19.017982+00:00"
creator: insta@0.5.2
expression: data
source: cqrs-todo-core/src/lib.rs
---
{
  "event_type": "todo_reminder_updated",
  "raw": "{\"time\":\"2100-01-01T00:00:00Z\"}"
}
