cqrs-todo-core/src/snapshots/tests__reminder_updated_none_event.snap
---
created: "2019-01-24T19:00:09.860180+00:00"
creator: insta@0.5.2
expression: data
source: cqrs-todo-core/src/lib.rs
---
RawEventWithType(
  event_type: "todo_reminder_updated",
  raw: "null",
)
